--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-native-sound": "^0.11.2",
     "react-persist": "^1.0.2",
     "react-redux": "^9.1.2",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "expo-av": "~14.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
